--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,15 @@ a {
 }
 
 
+.status {
+  display: inline;
+  color: #FC2542;
+  padding-left: 10px;
+  font-size: 11px;
+  font-weight: bold;
+  background-color: rgb(19, 19, 20);
+}
+
 .middle {
   display: inline-block;
   vertical-align: middle;
