--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,9 @@ a {
 
 
 .status {
-  display: inline;
+  display: block;
   color: #FC2542;
-  padding-left: 10px;
+  padding-top: 5px;
   font-size: 11px;
   font-weight: bold;
   background-color: rgb(19, 19, 20);
