--- a/css/main.css
+++ b/css/main.css
@@ -111,17 +111,12 @@ a, a:active, a:visited, a:link, a:hover {
 }
 
 #social a {
-  padding-right: 5px;
-  padding-left: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 #social a:hover {
   border-bottom: solid 1px;
-  border-top: solid 1px;
-}
-
-#social a:last-child:hover {
-  border-top: none;
 }
 
 #description {
