Support for iPhone 5

--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,15 @@ hr {
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .level {
+    float: none;
+    display: block;
+    margin-top: -3px;
+    margin-bottom: 7.5px;
+  }
+}
+
 
 
 /* Keyframes */
